# chademo-charge-controller

./: .gitignore  .gitmodules  README.md  dummy-interface.html
hardware/bom/: chademo-charge-controller-bom.csv
hardware/chademo-charge-controller/: #auto_saved_files#  chademo-charge-controller.kicad_pcb  chademo-charge-controller.kicad_prl  chademo-charge-controller.kicad_pro  chademo-charge-controller.kicad_sch  fp-info-cache
hardware/gerbers-v1.0/: chademo-charge-controller-B_Cu.gbl  chademo-charge-controller-B_Mask.gbs  chademo-charge-controller-B_Paste.gbp  chademo-charge-controller-B_Silkscreen.gbo  chademo-charge-controller-Edge_Cuts.gm1  chademo-charge-controller-F_Cu.gtl  chademo-charge-controller-F_Mask.gts  chademo-charge-controller-F_Paste.gtp  chademo-charge-controller-F_Silkscreen.gto  chademo-charge-controller-NPTH.drl  chademo-charge-controller-PTH.drl
hardware/pcl/: chademo-charge-controller-top-pos.csv  chademo-charge-controller.rpt
hardware/pos/: chademo-charge-controller-top-pos.csv
software/: .gitignore  CMakeLists.txt  battery.c  battery.cpp  battery.h  chademo.c  chademo.cpp  chademo.h  chademocomms.cpp  chademocomms.h  chademostatemachine.c  chademostatemachine.cpp  chademostatemachine.h  chademostation.c  chademostation.cpp  chademostation.h  charger.cpp  charger.h  comms.cpp  comms.h  htmltemplate.h  inputs.c  inputs.cpp  inputs.h  led.c  led.cpp  led.h  lwipopts.h  settings.h  statemachine.c  statemachine.h  station.c  station.h  types.h  util.c  util.cpp  util.h  wifi.c  wifi.h  wificonsole.h
web/: index.html  main.js  style.css
